# AVK_CPP_an_automatic_differentiation_library

./: .gitignore  CMakeLists.txt  README.md  cmake_build.bat  main.cpp  test.cpp
Testing/: main2.cpp  test.cpp
include/tensor/: Tensor0D.h  Tensor1D.h  Tensor2D.h  Tensor3D.h  TensorBase.h
src/tensor/: Tensor0D.cpp  Tensor1D.cpp  Tensor2D.cpp  Tensor3D.cpp  TensorBase.cpp
